--- a/package.json
+++ b/package.json
@@ -14,18 +14,25 @@
   "devDependencies": {
     "@ota-meshi/eslint-plugin-svelte": "^0.34.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.8",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.16",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.50.1",
     "svelte-check": "^2.9.0",
     "svelte-eslint-parser": "^0.18.3",
     "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-logical": "^3.0.0",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
