--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postcss": "^8.4.16",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "svelte": "^3.50.1",
     "svelte-check": "^2.9.0",
     "svelte-eslint-parser": "^0.18.3",
