--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint:fix": "eslint . --fix "
   },
   "devDependencies": {
-    "@ota-meshi/eslint-plugin-svelte": "^0.34.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.9",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
@@ -23,6 +22,7 @@
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-svelte": "^2.10.0",
     "postcss": "^8.4.17",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.7.1",
