refactor using unocss

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,6 @@
   "recommendations": [
     "svelte.svelte-vscode",
     "dbaeumer.vscode-eslint",
-    "csstools.postcss",
-    "esbenp.prettier-vscode",
-    "bradlc.vscode-tailwindcss"
+    "esbenp.prettier-vscode"
   ]
 }
