--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
     "svelte"
   ],
   "svelte.enable-ts-plugin": true,
-  "eslint.validate": ["svelte"]
+  "eslint.validate": [
+    "svelte"
+  ]
 }
