--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "lint:fix": "eslint . --fix "
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.9",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.8",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
@@ -23,18 +22,15 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte": "^2.12.0",
-    "postcss": "^8.4.19",
-    "postcss-load-config": "^4.0.1",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prettier-plugin-svelte": "^2.8.0",
     "svelte": "^3.53.1",
     "svelte-check": "^2.9.2",
     "svelte-eslint-parser": "^0.20.0",
     "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.2.3",
-    "tailwindcss-logical": "^3.0.0",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4",
+    "unocss": "^0.46.4",
     "vite": "^3.2.3"
   },
   "packageManager": "yarn@3.2.1"
