--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
   "svelte.enable-ts-plugin": true,
   "eslint.validate": [
     "svelte"
-  ]
+  ],
+  "testing.automaticallyOpenPeekView": "never"
 }
