--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "eslint.packageManager": "yarn",
+  "svelte.enable-ts-plugin": true,
+  "eslint.packageManager": "pnpm",
   "eslint.probe": [
     "javascript",
     "javascriptreact",
@@ -10,8 +11,11 @@
     "markdown",
     "svelte"
   ],
-  "svelte.enable-ts-plugin": true,
   "eslint.validate": [
     "svelte"
-  ]
+  ],
+  "prettier.documentSelectors": [
+    "**/*.svelte"
+  ],
+  "svelte.plugin.svelte.defaultScriptLanguage": "ts"
 }
